Update Assets Directory

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#001E3C" />
     <title>qr</title>
-    <link rel="stylesheet" href="../assets/app.css">
+    <link rel="stylesheet" href="/assets/app.css">
 </head>
 <body>
     <div id="loginPage" class="px-3 py-3 h-full flex justify-center items-center">
@@ -24,7 +24,7 @@
 	</div>
 
     <!-- <script src="//code.tidio.co/xfvcte7ngrb9xzvao06ju2fftiwmi2oq.js" async></script> -->
-	<script src="../assets/html5-qrcode.min.js"></script>
+	<script src="/assets/html5-qrcode.min.js"></script>
 	<!-- <script src="../assets/app.js"></script> -->
 
 	<script>
